--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "assert": "^2.1.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.1",
     "firebase": "^11.5.0",
     "https-browserify": "^1.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.4",
